# mtg-llm

./: .gitignore  agents.py  build_deck.py  database.py  eval_agents.py  game_master.py  game_state.py  image_generation.py  install.sh  log.py  process_assets.py  prompting.py  prompts.py  pyproject.toml  readme.md  requirements.txt  run.sh  run_cli.py  server.py
assets/essays/: whos_the_beatdown.txt
mtg-llm-web/: package-lock.json  package.json
mtg-llm-web/public/: index.html
mtg-llm-web/src/: App.tsx  scryfallApi.ts  tao_preferred_art_printings.json  types.ts
mtg-llm-web/src/components/: Card.tsx  CodeHistory.tsx  GameHistory.tsx  PlayerBoard.tsx
