[project]
name = "mtg-llm"
version = "0.1.0"
description = "Magic: The Gathering LLM game engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "anthropic>=0.18.0",
    "python-dotenv",
    "google-genai",
    "anyio[trio]",
    "trio",
    "fastapi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "assets/**",
    "mtg-llm-web/**"
]
